RESOLVED FIXED282374
MediaRecorder shouldn't perform memory allocation on the thread it is receiving audio samples
https://bugs.webkit.org/show_bug.cgi?id=282374
Summary MediaRecorder shouldn't perform memory allocation on the thread it is receivi...
Jean-Yves Avenard [:jya]
Reported 2024-10-30 23:36:37 PDT
The thread may be a real time thread, we want to avoid memory allocation there.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-30 23:36:55 PDT
Jean-Yves Avenard [:jya]
Comment 2 2024-10-31 02:31:48 PDT
EWS
Comment 3 2024-11-04 07:03:05 PST
Committed 286083@main (cb76829ab268): <https://commits.webkit.org/286083@main> Reviewed commits have been landed. Closing PR #35989 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.