Source/WebCore/platform/audio/cocoa/WebAudioBufferList.h
@@ -32,8 +32,8 @@
 
 struct AudioBuffer;
 struct AudioBufferList;
-typedef struct OpaqueCMBlockBuffer *CMBlockBufferRef;
-typedef struct opaqueCMSampleBuffer *CMSampleBufferRef;
+typedef struct OpaqueCMBlockBuffer* CMBlockBufferRef;
+typedef struct opaqueCMSampleBuffer* CMSampleBufferRef;
 
 namespace WebCore {
 
@@ -45,6 +45,8 @@ public:
     WEBCORE_EXPORT WebAudioBufferList(const CAAudioStreamDescription&, size_t sampleCount);
     WebAudioBufferList(const CAAudioStreamDescription&, CMSampleBufferRef);
     WEBCORE_EXPORT virtual ~WebAudioBufferList();
+
+    static std::optional<std::pair<UniqueRef<WebAudioBufferList>, RetainPtr<CMBlockBufferRef>>> createWebAudioBufferListWithBlockBuffer(const CAAudioStreamDescription&, size_t sampleCount);
 
     void reset();
     WEBCORE_EXPORT void setSampleCount(size_t);
@@ -63,6 +65,8 @@ public:
 
 private:
     Kind kind() const { return Kind::WebAudioBufferList; }
+    void initializeList(std::span<uint8_t>, size_t);
+    RetainPtr<CMBlockBufferRef> setSampleCountWithBlockBuffer(size_t);
 
     size_t m_listBufferSize { 0 };
     uint32_t m_bytesPerFrame { 0 };
